multiple fixes & optimizations